--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jul 27 22:17:00 IST 2016
-sdk.dir=/home/chandrasekar/Android/Sdk
+#Mon Aug 08 06:54:49 EDT 2016
+sdk.dir=C\:\\Users\\chandrasekar\\AppData\\Local\\Android\\Sdk
