--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    dataBinding {
+        enabled true
+    }
+
     defaultConfig {
         applicationId "com.rawoof.crk"
         minSdkVersion 19
@@ -53,4 +57,7 @@ dependencies {
     compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.1.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.paolorotolo:appintro:4.0.0'
+    compile 'com.github.ganfra:material-spinner:1.1.1'
+    compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.3.0'
+    compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.3.0'
 }
