--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,11 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleInstance"
             android:configChanges="screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.auidbook.prototype.SHOW_BLOOD_REQUEST_DETAILS" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
