--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,11 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.4'
     compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
     compile group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.paolorotolo:appintro:4.0.0'
     compile 'com.github.ganfra:material-spinner:1.1.1'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter:1.3.0'
     compile 'me.tatarka.bindingcollectionadapter:bindingcollectionadapter-recyclerview:1.3.0'
+    compile 'com.mobsandgeeks:android-saripaar:2.0.3'
 }
